--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>thi site was created by hash. it uses date from mapbox.com</p>
         <img class="portrait" src="/img/me.png">
     </div>
     
